--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,12 @@ services:
     env_file:
       - .env
     volumes:
-      - ./flask.sqlite:/portfolio-team4/flask.sqlite
+      - .:/portfolio-team4
+    depends_on:
+      - db
+
+  db:
+    image: postgres
+    restart: always
+    env_file:
+      - .env
