--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,11 @@ version: "3"
 services:
   web:
     build: .
-    ports:
-      - "80:80"
     restart: always
     env_file:
       - .env
     volumes:
-      - .:/portfolio-team4
+      - .:/myportfolio
     depends_on:
       - db
 
@@ -17,8 +15,20 @@ services:
     restart: always
     env_file:
       - .env
+
+  nginx:
+    image: jonasal/nginx-certbot:latest
+    restart: unless-stopped
+    env_file:
+      - ./nginx-certbot.env
+    ports:
+      - 80:80
+      - 443:443
     volumes:
-      - mydatabase:/var/lib/postgresql/data
+      - /etc/letsencrypt/:/etc/letsencrypt
+      - ./user_conf.d:/etc/nginx/user_conf.d
+    depends_on:
+      - web
 
 volumes:
-  mydatabase:
+  nginx_secrets:
