--- a/user_conf.d/nginx-conf.conf
+++ b/user_conf.d/nginx-conf.conf
@@ -4,16 +4,13 @@ server {
         # Load configuration files for the default server block.
 
         location / {
-            proxy_pass http://web:80;
+            proxy_pass http://web:80/;
         }
 
-        if ($host != "week2-mlh-domain-demo.duckdns.org") {
-            return 404;
-        }
     
 
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
-    listen 443 ssl; # managed by Certbot
+    listen 443 ssl;
+    listen [::]:443 ssl;
     ssl_certificate /etc/letsencrypt/live/week2-mlh-domain-demo.duckdns.org/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/week2-mlh-domain-demo.duckdns.org/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
