Add nginx reverse proxy for cadvisor

--- a/user_conf.d/nginx-conf.conf
+++ b/user_conf.d/nginx-conf.conf
@@ -1,6 +1,12 @@
 server {
     server_name www.week2-mlh-domain-demo.duckdns.org week2-mlh-domain-demo.duckdns.org; # managed by Certbot
 
+    location ~ ^/cadvisor(.*)$ {
+        proxy_pass http://cadvisor:8080$1;
+        proxy_redirect / /cadvisor/;
+	resolver 127.0.0.11;
+    }
+
         # Load configuration files for the default server block.
 
         location / {
